refactored data_cleaning_smhi

--- a/data_cleaning_smhi.ipynb
+++ b/data_cleaning_smhi.ipynb
@@ -8034,16 +8034,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "smhi_stockholm_df_pivot.drop(columns=['gust', 'lcc_mean', 'mcc_mean', 'hcc_mean', 'spp', 'pcat', 'pmin', 'pmax', 'pmedian', 'wsymb2', 'tstm'])"
+    "smhi_stockholm_df_pivot = smhi_stockholm_df_pivot.drop(columns=['gust', 'lcc_mean', 'mcc_mean', 'hcc_mean', 'spp', 'pcat', 'pmin', 'pmax', 'vis', 'pmedian', 'Wsymb2', 'tstm'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smhi_stockholm_df_pivot = smhi_stockholm_df_pivot.rename(columns={'tcc_mean': 'cloud_area_fraction', 'msl': 'air_pressure_at_sea_level',\n",
+    "    'r': 'relative_humidity', 'ws': 'wind_speed', 'wd': 'wind_from_direction', 't': 'air_temperature', \n",
+    "    'pmean': 'next_1_hours_precipitation_amount', 'validTime': 'time'})\n",
+    "smhi_stockholm_df_pivot = smhi_stockholm_df_pivot.round(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smhi_stockholm_df_pivot = smhi_stockholm_df_pivot[['time', 'air_pressure_at_sea_level','air_temperature','cloud_area_fraction','relative_humidity','wind_from_direction','wind_speed','next_1_hours_precipitation_amount']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
